# football_data

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  requirements.txt
.github/ISSUE_TEMPLATE/: template.md
architecture/mind_maps/: football_data_mind_map.mm
football_data/: models.py
src/core/: models.py
src/scrapping/: data_getters.py  main.py
